fixed input and select spacing issue

--- a/client/src/scss/Modals.module.scss
+++ b/client/src/scss/Modals.module.scss
@@ -66,7 +66,7 @@
 }
 .Input {
   font-size: 1.6rem;
-  padding: 2rem 1rem 1rem 1.5rem;
+  padding: 2rem 1rem 1rem 1.25rem;
   display: block;
   width: 100%;
   border: none;
@@ -109,18 +109,18 @@
   display: block;
   color: black;
   background: var(--primary);
-  font-size: 1.6rem;
+  font-size: 2rem;
   height: 5.5rem;
   position: relative;
   width: 100%;
   border: none;
   border: 2px solid var(--input-border);
-  padding-left: 3rem;
+  padding-left: 2rem;
   -webkit-appearance: none;
   -webkit-border-radius: 0.5rem;
   @include respond-to('small') {
     height: 4.5rem;
-    padding-left: 1rem;
+    padding-left: 1.25rem;
   }
 }
 option {
